# Changelog

All notable changes to `wenet-interaction-protocol-engine` will be documented in this file


## Version 0.22.0 (2021-10-)

 * Add new social context builder ranking by answers.
 * Fix new social context builder notify interaction.


## Version 0.21.0 (2021-08-23)

 * Upgrade common version that fix migrate collections stack overflow error.
 * Use new task status notification to the incentive server that inform the times
   an action is done by an user in a community by task type.
 * Remove hardcoded control of the protoocl interactions.
 * Created depreceted predicated to mantains backward compatibility.


## Version 0.20.0 (2021-07-01)

 * Manage the states of the user and the task.
 * Change license from MIT to Apache V2.
 * Add the norms form the profile and the task when evaluate the norms of a task.
 

## Version 0.19.0 (2021-03-31)

 * Integrate with norm engine with swipl.
 * Upgrade Vert.x version.
 * Add new common models to the API.
 * Upgarde VertX.
 * Allow to post/delete events for the norm engine.


## Version 0.18.0 (2021-02-15)

 * Modify harcoded eat together protocol to notify an user that its answers is considered teh best.


## Version 0.17.0 (2021-02-10)

 * Add new field when notify task status


## Version 0.16.1 (2021-02-01)

 * Change default log file name


## Version 0.16.0 (2021-02-01)

 * Add component key when ask other components.
 * Fix log format
 * Fix openapi to be static


## Version 0.15.1 (2021-01-25)

 * Solve problem with nullable values on status.


## Version 0.15.0 (2021-01-22)

 * Inform the incentive server when task changed on the Q&A protocol.


## Version 0.14.0 (2021-01-15)

 * Add hardcoded manager of the Question and answer protocol.


## Version 0.13.0 (2021-01-14)

 * Adapt to the new task models.


## Version 0.12.0 (2020-08-13)

 * Integrate engine with SWIProlog.


## Version 0.11.0 (2020-07-17)

 * Add new service to obtain information of the API.


## Version 0.10.1 (2020-07-08)
